--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>SKIMSTONES | SQWEEZY – Compacteur malin (FR/EN)</title>
-  <meta name="description" content="SQWEEZY, le compacteur manuel éco-conçu par SKIMSTONES pour écraser bouteilles plastiques et canettes – simple, pratique, ludique, sans énergie. / A smart, energy-free home compactor for plastic bottles and cans." />
+  <meta name="description" content="Découvrez SQWEEZY, le compacteur éco-conçu par SKIMSTONES pour écraser bouteilles plastiques et canettes – simple, pratique, ludique, sans énergie. / Discover SQWEEZY, the smart, energy-free home compactor for plastic bottles and cans." />
   <link rel="icon" href="/favicon.ico" />
   <style>
     /* Polices charte */
