--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <style>
     /* Polices charte */
     @font-face { font-family: 'Gadugi'; src: local('Gadugi'), local('Gadugi-Regular'); }
-    @font-face { font-family: 'Stylus BT'; src: local('Stylus BT'), local('StylusBT-Regular'); }
+    @font-face { font-family: 'Candara'; src: local('Candara'), local('Candara'); }
 
     :root{
       --brand:#004E7E; /* bleu pétrole */
@@ -32,7 +32,7 @@
     .btn.ghost{background:transparent;color:var(--brand);border:1px solid var(--brand)}
     nav a.btn.ghost{display:inline-flex;align-items:center}
 
-    h1,h2,h3{font-family:'Stylus BT','Gadugi',sans-serif;color:var(--brand)}
+    h1,h2,h3{font-family:'candara','Gadugi',sans-serif;color:var(--brand)}
     .hero{padding:60px 0 24px;display:grid;gap:28px;grid-template-columns:1fr}
     .hero h1{font-size:clamp(28px,4vw,46px);margin:0}
     .sub{color:var(--muted);max-width:70ch}
