--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>SKIMSTONES | SQWEEZY – Compacteur malin (FR/EN)</title>
+    <title> SQWEEZY by SKIMSTONES (FR/EN)</title>
+
   <meta name="description" content="Découvrez SQWEEZY, le compacteur éco-conçu par SKIMSTONES pour écraser bouteilles plastiques et canettes – simple, pratique, ludique, sans énergie. / Discover SQWEEZY, the smart, energy-free home compactor for plastic bottles and cans." />
   <link rel="icon" href="/favicon.ico" />
   <style>
@@ -77,7 +78,7 @@
     "description":"Compacteur manuel pour bouteilles plastiques (jusqu'à 1,5 L) et canettes, sans électricité, en ABS recyclé.",
     "material": "Recycled ABS, steel",
     "url":"https://www.skimstones.com/",
-    "logo":"/LOGODEF%20SQWEEZY1.png"
+    "logo":"LOGODEF SQWEEZY1.png"
   }
   </script>
 </head>
@@ -85,14 +86,14 @@
   <header>
     <div class="wrap row">
       <div class="brand">
-        <img src="/LOGODEF%20SQWEEZY1.png" alt="Logo SQWEEZY" />
+        <img src="LOGODEF SQWEEZY1.png" alt="Logo SQWEEZY" />
         <div>
           <button id="btn-fr" class="btn ghost" aria-label="Français">FR</button>
           <button id="btn-en" class="btn ghost" aria-label="English">EN</button>
         </div>
       </div>
       <nav style="display:flex;gap:12px;align-items:center;flex-wrap:wrap">
-        <a href="/jobs.html" class="btn ghost" aria-label="Skimstones recrute">Skimstones recrute</a>
+        <a href="/skimstones_recrutements_jobs.html" class="btn ghost" aria-label="Skimstones recrute">Skimstones recrute</a>
         <a class="btn" href="#contact"><span class="lang-fr">Nous contacter</span><span class="lang-en">Contact us</span></a>
       </nav>
     </div>
@@ -104,11 +105,11 @@
       <div>
         <span class="badge">ABS recyclé · CE</span>
         <h1>
-          <span class="lang-fr">SQWEEZY, le compacteur malin à la maison</span>
-          <span class="lang-en">SQWEEZY, the smart home compactor</span>
+          <span class="lang-fr">SQWEEZY, le compacteur futé qui change tout à la maison</span>
+          <span class="lang-en">SQWEEZY, the smart compactor that changes everything at home </span>
         </h1>
-        <p class="sub lang-fr">Compactez bouteilles plastiques (jusqu’à 1,5&nbsp;L) et canettes avec jusqu’à –85&nbsp;% de volume. Simple, pratique, ludique, sans électricité. Conçu par SKIMSTONES, fabriqué au Maroc.</p>
-        <p class="sub lang-en">Compact plastic bottles (up to 1.5&nbsp;L) and cans with up to –85% volume. Simple, practical, fun and energy-free. Designed by SKIMSTONES, made in Morocco.</p>
+        <p class="sub lang-fr">Compactez bouteilles plastiques (jusqu’à 1,5&nbsp;L) et canettes en réduisant jusqu’à –85&nbsp;% leur volume. Simple, pratique, portable et sans électricité. Conçu par SKIMSTONES, fabriqué avec ♥ au Maroc.</p>
+        <p class="sub lang-en">Compact plastic bottles (up to 1.5&nbsp;L) and cans by reducing their volume up to –85%. Simple, handy, portable and energy-free. Designed by SKIMSTONES, Manufactured with ♥ in Morocco.</p>
 
         <div style="display:flex;gap:12px;flex-wrap:wrap;margin-top:8px">
           <a class="btn secondary" href="https://youtu.be/98tDzN5gogI" target="_blank" rel="noopener">
