--- a/index.html
+++ b/index.html
@@ -132,30 +132,56 @@
       <div class="card">
         <ul class="lang-fr">
           <li>Pression au pied, pas d’électricité</li>
-          <li>Stable, léger, près des bacs de tri</li>
+          <li>Stable, léger, à poser près de votre bac de tri</li>
           <li>Jusqu’à 85&nbsp;% de volume en moins</li>
         </ul>
         <ul class="lang-en">
           <li>Foot press, no electricity</li>
-          <li>Stable, lightweight, beside your bins</li>
+          <li>Stable, lightweight, to be installed near to your recycling bins</li>
           <li>Up to 85% less volume</li>
         </ul>
       </div>
 
-      <!-- Teasers PDF visibles directement -->
-      <div style="margin-top:16px">
-        <div class="lang-fr">
-          <h3 style="margin:8px 0">Teaser publicitaire (FR)</h3>
-          <iframe class="pdfframe" title="Teaser SQWEEZY (FR)" src="/FR%20TEASER%20DEF.pdf" style="width:100%;height:560px;border:1px solid #e5e7eb;border-radius:12px"></iframe>
-          <p style="margin-top:8px"><a class="btn ghost" href="/FR%20TEASER%20DEF.pdf" target="_blank" rel="noopener">Ouvrir en plein écran</a></p>
-        </div>
-        <div class="lang-en">
-          <h3 style="margin:8px 0">Advertising teaser (EN)</h3>
-          <iframe class="pdfframe" title="Teaser SQWEEZY (EN)" src="/EN%20TEASER%20DEF.pdf" style="width:100%;height:560px;border:1px solid #e5e7eb;border-radius:12px"></iframe>
-          <p style="margin-top:8px"><a class="btn ghost" href="/EN%20TEASER%20DEF.pdf" target="_blank" rel="noopener">Open full screen</a></p>
-        </div>
-      </div>
-    </section>
+      <!-- Teaser PDF plein écran réduit à 75% -->
+<div class="teaser" style="margin-top:24px;text-align:center">
+  <!-- Version FR -->
+  <div class="lang-fr">
+    <h3 style="margin-bottom:12px">Découvrez SQWEEZY en un clin d’œil !</h3>
+    <div style="display:inline-block;transform:scale(0.75);transform-origin:top center;width:100%;">
+      <iframe 
+        title="Teaser SQWEEZY (FR)" 
+        src="/FR%20TEASER%20DEF.pdf#toolbar=0&navpanes=0&scrollbar=0" 
+        style="width:100%;height:700px;border:none;pointer-events:none"
+        sandbox="allow-same-origin"
+      ></iframe>
+    </div>
+    <p style="margin-top:10px">
+      <a class="btn ghost" href="/FR%20TEASER%20DEF.pdf#view=FitH" target="_blank" rel="noopener noreferrer">
+        Voir le teaser en plein écran
+      </a>
+    </p>
+  </div>
+
+  <!-- Version EN -->
+  <div class="lang-en">
+    <h3 style="margin-bottom:12px">Discover SQWEEZY at a glance!</h3>
+    <div style="display:inline-block;transform:scale(0.75);transform-origin:top center;width:100%;">
+      <iframe 
+        title="SQWEEZY Teaser (EN)" 
+        src="/EN%20TEASER%20DEF.pdf#toolbar=0&navpanes=0&scrollbar=0" 
+        style="width:100%;height:700px;border:none;pointer-events:none"
+        sandbox="allow-same-origin"
+      ></iframe>
+    </div>
+    <p style="margin-top:10px">
+      <a class="btn ghost" href="/EN%20TEASER%20DEF.pdf#view=FitH" target="_blank" rel="noopener noreferrer">
+        Watch full teaser
+      </a>
+    </p>
+  </div>
+</div>
+</section>
+
 
     <!-- SPEC / USE CASES (facultatif, garder la structure simple) -->
     <section class="section">
