--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       ></iframe>
     </div>
     <p style="margin-top:10px">
-      <a class="btn ghost" href="/FR TEASER DEF.pdf.pdf#view=FitH" target="_blank" rel="noopener noreferrer">
+      <a class="btn ghost" href="/FR TEASER DEF.pdf#view=FitH" target="_blank" rel="noopener noreferrer">
         Voir le teaser en plein écran
       </a>
     </p>
@@ -168,7 +168,7 @@
     <div style="display:inline-block;transform:scale(0.75);transform-origin:top center;width:100%;">
       <iframe 
         title="SQWEEZY Teaser (EN)" 
-        src="/EN TEASER DEF.pdf.pdf#toolbar=0&navpanes=0&scrollbar=0" 
+        src="/EN TEASER DEF.pdf#toolbar=0&navpanes=0&scrollbar=0" 
         style="width:100%;height:700px;border:none;pointer-events:none"
         sandbox="allow-same-origin"
       ></iframe>
