modifier 3 images sqweezy

--- a/index.html
+++ b/index.html
@@ -224,9 +224,9 @@
       <h2 class="lang-fr">Galerie</h2>
       <h2 class="lang-en">Gallery</h2>
       <div class="gallery">
-        <img src="/sqweezy-1.png" alt="SQWEEZY – vue 1" />
-        <img src="/sqweezy-2.png" alt="SQWEEZY – vue 2" />
-        <img src="/sqweezy-3.png" alt="SQWEEZY – vue 3" />
+        <img src="/ouvert.png" alt="SQWEEZY – vue 1" />
+        <img src="/fermé.png" alt="SQWEEZY – vue 2" />
+        <img src="/avec bouteille compactée.png" alt="SQWEEZY – vue 3" />
       </div>
     </section>
 
