--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     "description":"Compacteur manuel pour bouteilles plastiques (jusqu'à 1,5 L) et canettes, sans électricité, en ABS recyclé.",
     "material": "Recycled ABS, steel",
     "url":"https://www.skimstones.com/",
-    "logo":"LOGODEF SQWEEZY1.png"
+    "logo":"/LOGODEF%20SQWEEZY1.png"
   }
   </script>
 </head>
@@ -86,7 +86,7 @@
   <header>
     <div class="wrap row">
       <div class="brand">
-        <img src="LOGODEF SQWEEZY1.png" alt="Logo SQWEEZY" />
+        <img src="/LOGODEF%20SQWEEZY1.png" alt="Logo SQWEEZY" />
         <div>
           <button id="btn-fr" class="btn ghost" aria-label="Français">FR</button>
           <button id="btn-en" class="btn ghost" aria-label="English">EN</button>
@@ -120,7 +120,7 @@
       </div>
       <div>
         <!-- Remplacer par une photo détourée .png -->
-        <img src="/sqweezy-product.png" alt="Photo du produit SQWEEZY" style="width:100%;border-radius:16px;border:1px solid #e5e7eb" />
+        <img src="/alu détouré.png" alt="Photo du produit SQWEEZY" style="width:100%;border-radius:16px;border:1px solid #e5e7eb" />
       </div>
     </section>
 
