--- a/skimstones_recrutements_jobs.html
+++ b/skimstones_recrutements_jobs.html
@@ -30,7 +30,7 @@
   <header>
     <div class="wrap row">
       <div class="brand">
-        <img src="/LOGODEF%20SQWEEZY1.png" alt="Logo SQWEEZY" />
+        <img src="/LOGO SKIMSTONES avec BASELINE.png" alt="Logo SKIMSTONES" />
         <div>
           <button id="btn-fr" class="btn ghost">FR</button>
           <button id="btn-en" class="btn ghost">EN</button>
@@ -51,26 +51,7 @@
       <div class="col-8">
         <div id="jobs"></div>
       </div>
-      <aside class="col-4">
-        <div id="post" class="card">
-          <h3>Publier une offre (simple)</h3>
-          <p><small>Option rapide sans back‑office : ajoutez vos offres dans un fichier <code>jobs.json</code> à la racine du site. Ce fichier sera lu et affiché automatiquement.</small></p>
-          <p><strong>Format attendu :</strong></p>
-<pre style="white-space:pre-wrap;background:#f8fafc;border:1px solid #e2e8f0;border-radius:10px;padding:10px">[
-  {
-    "title": "Chargé(e) de logistique",
-    "location": "Rabat, Maroc",
-    "type": "CDI",
-    "posted": "2025-11-03",
-    "summary": "Pilotage des flux, coordination fournisseurs, KPI…",
-    "lang": "fr",
-    "url": "mailto:contact@skimstones.com?subject=Candidature%20Charg%C3%A9%28e%29%20logistique"
-  }
-]</pre>
-          <p>Uploadez/Remplacez simplement le fichier <code>jobs.json</code> à la racine via Netlify/Vercel. Pas besoin de modifier la page.</p>
-          <p><small>Besoin d’un vrai mode blog/admin ? On pourra activer plus tard <strong>Netlify CMS</strong> ou <strong>GitHub CMS</strong>.</small></p>
-        </div>
-      </aside>
+      
     </div>
   </main>
 
