--- a/index.html
+++ b/index.html
@@ -51,22 +51,25 @@
 
     footer{border-top:2px solid var(--eco);padding:24px 0;color:var(--muted)}
     footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:none}
-/* Cadre du teaser au ratio A4 (portrait) */
-.teaser-box{
-  width: min(900px, 100%);           /* largeur max confortable */
-  aspect-ratio: 1 / 1.414;           /* A4 portrait (L/H ≈ 1/1.414) */
+/* Cadre du teaser au ratio A4 (portrait) ajusté à 75%) */
+.teaser-box {
+  width: min(700px, 100%);        /* largeur plus raisonnable */
+  aspect-ratio: 1 / 1.414;        /* ratio A4 portrait */
   margin: 0 auto 10px auto;
   border: 1px solid #e5e7eb;
   border-radius: 12px;
   overflow: hidden;
   box-shadow: 0 4px 16px rgba(0,0,0,.06);
+  transform: scale(0.85);         /* réduction visuelle du cadre */
+  transform-origin: top center;   /* garde le cadre centré */
 }
-.teaser-box iframe{
+.teaser-box iframe {
   width: 100%;
   height: 100%;
   border: 0;
-  pointer-events: none;              /* on ne clique pas dans l’iframe */
+  pointer-events: none;
 }
+
 
    /* Galerie : 3 visuels alignés, même hauteur, sans déformation */
 /* À GARDER (propre) */
