--- a/index.html
+++ b/index.html
@@ -45,13 +45,26 @@
     .gallery img{width:100%;height:auto;border-radius:12px;border:1px solid #e5e7eb}
     .badge{display:inline-block;background:var(--eco);color:#0a0a0a;border-radius:999px;padding:4px 10px;font-weight:600}
 
-/* Bilingue */
-    [data-lang="en"] .lang-fr{display:none}
-    [data-lang="fr"] .lang-en{display:none}
 
-    footer{border-top:2px solid var(--eco);padding:24px 0;color:var(--muted)}
-    footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:none}
-/* Cadre du teaser au ratio A4 (portrait), sans scale */
+/* Bilingue */
+[data-lang="en"] .lang-fr{display:none}
+[data-lang="fr"] .lang-en{display:none}
+
+/* Bouton de langue actif */
+.btn.ghost.active,
+.btn.ghost[aria-pressed="true"] {
+  background: var(--brand);
+  color: #fff;
+  border-color: var(--brand);
+  font-weight: 700;
+  transition: all 0.25s ease; /* optionnel : effet fluide */
+}
+
+/* Footer (inchangé) */
+footer{border-top:2px solid var(--eco);padding:24px 0;color:var(--muted)}
+footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:none}
+
+    /* Cadre du teaser au ratio A4 (portrait), sans scale */
 .teaser-box{
   width: min(760px, 95vw);      /* largeur confortable et responsive */
   aspect-ratio: 1 / 1.414;      /* A4 portrait */
