--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>SQWEEZY by SKIMSTONES — the smart compactor (FR/EN)</title>
 
   <meta name="description" content="Découvrez SQWEEZY, le compacteur éco-conçu par SKIMSTONES pour écraser bouteilles plastiques et canettes – simple, pratique, ludique, sans énergie. / Discover SQWEEZY, the smart, energy-free home compactor for plastic bottles and cans." />
-
-  <style>
+<link rel="icon" type="image/x-icon" href="/flavico.ico"/>
+ <style>
     /* Polices charte */
     @font-face { font-family: 'Gadugi'; src: local('Gadugi'), local('Gadugi-Regular'); }
     @font-face { font-family: 'Candara'; src: local('Candara'), local('Candara'); }
