Correction du pointage BT vidéo

--- a/index.html
+++ b/index.html
@@ -166,11 +166,23 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
         <p class="sub lang-en">Compact plastic bottles (up to 1.5&nbsp;L) and cans by reducing their volume up to –85%. Simple, handy, portable and energy-free. Designed by SKIMSTONES, Manufactured with ♥ in Morocco.</p>
 
         <div style="display:flex;gap:12px;flex-wrap:wrap;margin-top:8px">
-          <a class="btn secondary" href="https://youtu.be/98tDzN5gogI" target="_blank" rel="noopener">
-            ▶ <span class="lang-fr">Voir la vidéo</span><span class="lang-en">Watch video</span>
-          </a>
-          <a class="btn ghost" href="#features"><span class="lang-fr">Découvrir</span><span class="lang-en">Explore</span></a>
-        </div>
+  <!-- Version FR -->
+  <a class="btn secondary lang-fr" href="https://youtu.be/t9LwSsf3-10" target="_blank" rel="noopener">
+    ▶ Voir la vidéo
+  </a>
+
+  <!-- Version EN -->
+  <a class="btn secondary lang-en" href="https://youtu.be/98tDzN5gogI" target="_blank" rel="noopener">
+    ▶ Watch video
+  </a>
+
+  <!-- Bouton Découvrir / Explore -->
+  <a class="btn ghost" href="#features">
+    <span class="lang-fr">Découvrir</span>
+    <span class="lang-en">Explore</span>
+  </a>
+</div>
+
       </div>
       <div>
         <!-- Remplacer par une photo détourée .png -->
