--- a/index.html
+++ b/index.html
@@ -251,14 +251,16 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
           <div>
             <ul class="lang-fr">
               <li>Dimensions emballage : 44 × 21 × 17 cm</li>
-              <li>Hauteur max : H1 78,9 cm (nominal), H2 42,5 cm (pressé)</li>
-              <li>Diamètre socle : D 20 cm</li>
+              <li>Hauteur Max : H1= 78,9 cm (nominal), H2= 42,5 cm (pressé)</li>
+              <li>Hauteur Pédale : h1= 27 cm (nominal), h2= 7,8 cm (pressé)</li>
+              <li>Diamètre Socle : D= 20 cm</li>
               <li>Matériaux : ABS recyclé + pièces métal</li>
             </ul>
             <ul class="lang-en">
               <li>Box dimensions: 44 × 21 × 17 cm</li>
-              <li>Max Height: H1 78.9 cm (nominal), H2 42.5 cm (pressed)</li>
-              <li>Base diameter: D 20 cm</li>
+              <li>Max Height: H1= 78.9 cm (nominal), H2= 42.5 cm (pressed)</li>
+              <li>Foot pedal Height : h1= 27 cm (nominal), h2= 7,8 cm (pressed)</li>
+              <li>Base diameter: D= 20 cm</li>
               <li>Materials: recycled ABS + metal parts</li>
             </ul>
           </div>
