--- a/index.html
+++ b/index.html
@@ -288,6 +288,8 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
     <img src="/ouvert.png" alt="SQWEEZY – vue ouverte" loading="lazy" decoding="async" />
     <img src="/ferm%C3%A9.png" alt="SQWEEZY – vue fermée" loading="lazy" decoding="async" />
     <img src="/avec%20bouteille%20compact%C3%A9e.png" alt="SQWEEZY – avec bouteille compactée" loading="lazy" decoding="async" />
+    <img src="/fichetech.png" alt="SQWEEZY – fiche technique" loading="lazy" decoding="async" />
+
   </div>
 </section>
 
