modif fiche technique

--- a/index.html
+++ b/index.html
@@ -250,29 +250,30 @@ footer .social a{display:inline-flex;align-items:center;gap:8px;text-decoration:
         <div style="display:grid;grid-template-columns:repeat(2,1fr);gap:12px">
           <div>
             <ul class="lang-fr">
-              <li>Dimensions emballage : 44 × 21 × 17 cm</li>
-              <li>Hauteur Max : H1= 78,9 cm (nominal), H2= 42,5 cm (pressé)</li>
-              <li>Hauteur Pédale : h1= 27 cm (nominal), h2= 7,8 cm (pressé)</li>
-              <li>Diamètre Socle : D= 20 cm</li>
-              <li>Matériaux : ABS recyclé + pièces métal</li>
+              <li>Hauteur Max : H1 = 78,9 cm (nominal), H2 = 42,5 cm (pressé)</li>
+              <li>Hauteur Pédale : h1 = 27 cm (nominal), h2 = 7,8 cm (pressé)</li>
+              <li>Diamètre Socle : D = 20 cm</li>
+              <li>Matériaux : 100% ABS premium recyclé ; tirants en acier inox; vis en métal</li>
             </ul>
             <ul class="lang-en">
-              <li>Box dimensions: 44 × 21 × 17 cm</li>
+  
               <li>Max Height: H1= 78.9 cm (nominal), H2= 42.5 cm (pressed)</li>
               <li>Foot pedal Height : h1= 27 cm (nominal), h2= 7,8 cm (pressed)</li>
               <li>Base diameter: D= 20 cm</li>
-              <li>Materials: recycled ABS + metal parts</li>
+              <li>Materials: 100% premium recycled ABS ; stainless steel rods ; metal screws</li>
             </ul>
           </div>
           <div>
             <ul class="lang-fr">
               <li>Poids net : ± 1,8 kg</li>
-              <li>Kit à assembler (outil inclus) en 5 min</li>
+              <li>Kit à assembler (outil inclus) en 5 minutes</li>
+             <li>Dimensions emballage : 44 × 21 × 17 cm</li>
               <li>Certification CE</li>
             </ul>
             <ul class="lang-en">
               <li>Net weight: ± 1.8 kg</li>
-              <li>Flat-pack kit (tool included) in 5 min</li>
+              <li>Flat-pack kit (tool included) in 5 minutes</li>
+              <li>Box dimensions: 44 × 21 × 17 cm</li>
               <li>CE certified</li>
             </ul>
           </div>
